--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "eframe_template"
-version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+name = "ratframe"
+version = "1.0.0"
+authors = ["meowmeow"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 rust-version = "1.76"
@@ -10,7 +10,26 @@ rust-version = "1.76"
 all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
+[dev-dependencies]
+once_cell = { version = "1.19.0" }
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
+argh = "0.1.12"
+
+
+[[example]]
+name = "hello_world_minimum"
+doc-scrape-examples = true
+
+[[example]]
+name = "demo"
+doc-scrape-examples = true
+
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+ratatui = { version = "0.26.1", default-features = false }
 egui = "0.27.0"
 eframe = { version = "0.27.0", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
