--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ eframe = { version = "0.27.0", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
+web-time = "1"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
