--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,9 @@ env_logger = "0.10"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
 
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
+
 
 [profile.release]
 opt-level = 2 # fast and small wasm
