--- a/examples/demo_web/Cargo.toml
+++ b/examples/demo_web/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ratframe"
+name = "colors"
 version = "1.0.0"
 authors = ["meowmeow"]
 edition = "2021"
@@ -10,25 +10,6 @@ rust-version = "1.76"
 all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
-[dev-dependencies]
-once_cell = { version = "1.19.0" }
-rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
-argh = "0.1.12"
-itertools = "0.12.1"
-
-
-[[example]]
-name = "hello_world_minimum"
-doc-scrape-examples = true
-
-
-[[example]]
-name = "hello_world_web"
-doc-scrape-examples = true
-
-
-[lib]
-crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 ratatui = { version = "0.26.1", default-features = false }
@@ -41,6 +22,11 @@ eframe = { version = "0.27.0", default-features = false, features = [
 ] }
 log = "0.4"
 web-time = "1"
+once_cell = { version = "1.19.0" }
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
+argh = "0.1.12"
+itertools = "0.12.1"
+ratframe = { path = "../../" }
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
