--- a/examples/hello_world_web/Cargo.toml
+++ b/examples/hello_world_web/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "colors"
 version = "1.0.2"
-authors = ["meowmeow"]
+authors = ["gold-silver-copper"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 rust-version = "1.76"
