--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ratframe"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["gold-silver-copper"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
@@ -32,19 +32,16 @@ doc-scrape-examples = false
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-ratatui = { version = "0.26.1", default-features = false }
-egui = "0.27.0"
-eframe = { version = "0.27.0", default-features = false, features = [
+ratatui = { version = "0.26.2", default-features = false }
+egui = "0.27.2"
+eframe = { version = "0.27.2", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
-log = "0.4"
+#log = "0.4"
 web-time = "1"
-
-# You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
 
 
 # native:
