--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ eframe = { version = "0.27.2", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
-#log = "0.4"
+
 web-time = "1"
 
 
@@ -51,6 +51,7 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
+log = "0.4"
 
 
 [profile.release]
