--- a/examples/colors_web/Cargo.toml
+++ b/examples/colors_web/Cargo.toml
@@ -23,10 +23,7 @@ eframe = { version = "0.27.0", default-features = false, features = [
 
 ratframe = { path = "../../" }
 
-# You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
-
-
+itertools = "0.12.1"
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
@@ -34,7 +31,7 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-
+log = "0.4"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
