--- a/examples/demo_web/Cargo.toml
+++ b/examples/demo_web/Cargo.toml
@@ -21,6 +21,7 @@ eframe = { version = "0.27.0", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
+web-time = "1"
 once_cell = { version = "1.19.0" }
 rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 argh = "0.1.12"
@@ -38,6 +39,7 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
+log = "0.4"
 
 
 [profile.release]
