--- a/examples/hello_world_web/Cargo.toml
+++ b/examples/hello_world_web/Cargo.toml
@@ -29,7 +29,7 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-
+log = "0.4"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
