--- a/examples/barchart_web/Cargo.toml
+++ b/examples/barchart_web/Cargo.toml
@@ -21,7 +21,7 @@ eframe = { version = "0.27.0", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 ratframe = { path = "../../" }
-
+web-time = "1"
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
