--- a/examples/colors_web/Cargo.toml
+++ b/examples/colors_web/Cargo.toml
@@ -24,6 +24,7 @@ eframe = { version = "0.27.0", default-features = false, features = [
 ratframe = { path = "../../" }
 
 itertools = "0.12.1"
+web-time = "1.1.0"
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
