--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,9 @@ eframe = { version = "0.27.2", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
-] }
+] , optional= true}
 
-web-time = "1"
+web-time = {version = "1" , optional = true}
 
 
 # native:
@@ -54,6 +54,8 @@ env_logger = "0.10"
 wasm-bindgen-futures = "0.4"
 log = "0.4"
 
+[features]
+default = ["eframe", "web-time"]
 
 [profile.release]
 opt-level = 2 # fast and small wasm
