--- a/bevy_example/Cargo.toml
+++ b/bevy_example/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 bevy = "0.13.2"
 bevy_egui = "0.27.0"
 ratatui = "0.26.2"
-ratframe = "1.0.13"
+ratframe = {version = "1.0.13", default-features = false}
