--- a/bevy_example/Cargo.toml
+++ b/bevy_example/Cargo.toml
@@ -10,3 +10,4 @@ bevy = "0.13.2"
 bevy_egui = "0.27.0"
 ratatui = "0.26.2"
 ratframe = {version = "1.0.13", default-features = false}
+#disable defaults features for rat frame if you do not want to import eframe
