--- a/macroquad_example/Cargo.toml
+++ b/macroquad_example/Cargo.toml
@@ -11,6 +11,6 @@ egui = "0.27.2"
 macroquad = "0.4.5"
 egui-macroquad = { git = 'https://github.com/gold-silver-copper/egui-macroquad.git', branch="master" }
 
-ratatui = "0.26.2"
+ratatui = { version = "0.26.2", default-features = false }
 ratframe = {version = "1.0.13", default-features = false}
 #disable defaults features for rat frame if you do not want to import eframe
