--- a/bevy_example/Cargo.toml
+++ b/bevy_example/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 bevy = "0.13.2"
 bevy_egui = "0.27.0"
-ratatui = "0.26.2"
+ratatui = { version = "0.26.2", default-features = false }
 ratframe = {version = "1.0.13", default-features = false}
 #disable defaults features for rat frame if you do not want to import eframe
