--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ratframe"
-version = "1.1.1"
+version = "1.1.2"
 authors = ["gold-silver-copper"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
@@ -41,7 +41,7 @@ eframe = { version = "0.27.2", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] , optional= true}
 
-web-time = {version = "1" , optional = true}
+web-time = {version = "1" }
 
 
 # native:
@@ -54,7 +54,7 @@ wasm-bindgen-futures = "0.4"
 log = "0.4"
 
 [features]
-default = ["eframe", "web-time"]
+default = ["eframe"]
 
 [profile.release]
 opt-level = 2 # fast and small wasm
