--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "ratframe"
-version = "1.1.4"
+version = "1.1.5"
 authors = ["gold-silver-copper"]
 edition = "2021"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 rust-version = "1.76"
 description = "WASM ratatui with egui"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/gold-silver-copper/ratatui_egui_wasm"
 
 [package.metadata.docs.rs]
 all-features = true
