--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ itertools = "0.12.1"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-ratatui = { version = "0.26.2", default-features = false }
-egui = "0.27.2"
+ratatui = { version = ^0.26.2", default-features = false }
+egui = "{ version = "^0.27.2", default-features = false }
 
 web-time = {version = "1" }
 
