--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ itertools = "0.12.1"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-ratatui = { version = "*", default-features = false }
-egui = { version = "*", default-features = false }
+ratatui = { version = ">=0.26", default-features = false }
+egui = { version = ">=0.27", default-features = false }
 
 web-time = {version = "1" }
 
