--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ examples/hello_world_web/Cargo.lock
 examples/hello_world_web/Cargo.lock
 examples/demo_web/Cargo.lock
 examples/colors_web/Cargo.lock
+/test_example
