--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 ratatui = { version = ">=0.28", default-features = false }
-egui = { version = ">=0.28", default-features = false }
+egui = { version = "0.28", default-features = false }
 
-web-time = {version = "1" }
-
+web-time = { version = "1" }
 
 
 [profile.release]
@@ -27,4 +26,3 @@ opt-level = 2 # fast and small wasm
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
 opt-level = 2
-
