--- a/bevy_example/Cargo.toml
+++ b/bevy_example/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.14.1"
-bevy_egui = "0.29.0"
-ratatui = { version = ">=0.28", default-features = false }
+bevy_egui = "0.30.0"
+ratatui = { version = "0.29", default-features = false }
 egui_ratatui = { path = "../" }
 #disable defaults features for rat frame if you do not want to import eframe
