--- a/bevy_example/Cargo.toml
+++ b/bevy_example/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bevy_example"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,5 +10,10 @@ bevy = "0.15"
 bevy_egui = "0.33.0"
 ratatui = { version = "0.29", default-features = false }
 egui_ratatui = { path = "../" }
+egui_extras = { version = "*", features = ["all_loaders"] }
+image = { version = "0.25", features = ["jpeg", "png"] }
+
+egui = { version = "0.31", default-features = true }
+# Add the types you want support for
 #disable defaults features for rat frame if you do not want to import eframe
 #
