--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 ratatui = { version = "0.29", default-features = false }
 egui = { version = "0.31", default-features = false }
+egui_extras = { version = "*", features = ["all_loaders"] }
+image = { version = "0.25", features = ["jpeg", "png"] }
 
 web-time = { version = "1" }
-soft_ratatui = "0.0.1"
 
+soft_ratatui = { path = "../../soft_ratatui" }
 
 [profile.release]
 opt-level = 2 # fast and small wasm
